# atarieyes

./: .gitignore  .vimrc  .ycm_extra_conf.py  Dockerfile  Pipfile  README.md  pyproject.toml  setup.py  todo.txt
atarieyes/: __main__.py  automata.py  layers.py  models.py  pytools.py  selector.py  streaming.py  tftools.py  tools.py  trainer.py  training.py  trtools.py
atarieyes/agent/: models.py  playing.py  training.py
atarieyes/features/: genetic.py  layers.py  models.py  rb.py  selector.py  temporal.py  training.py
definitions/: BreakoutDeterministic-v4.json  MontezumaRevengeDeterministic-v4.json
docker/: Dockerfile  build.sh  run.sh  setup.sh
envs_data/: Breakout-v4.json  BreakoutDeterministic-v4.json
scripts/: build.sh  run.sh  setup.sh
