[tool.poetry]
name = "atarieyes"
version = "0.0.5"
description = "Guided RL on the Atari games with features extraction"
authors = ["Roberto Cipollone <cipollone.rt@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/cipollone/atarieyes"
repository = "https://github.com/cipollone/atarieyes"
keywords = ["RL", "logic", "atari", "temporal_logic"]
classifiers = [
	"Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Intended Audience :: Developers",
]

[tool.poetry.dependencies]
python = "^3.7"
opencv-python = "*"
numpy = "*"
gym = {version = "*", extras = ["atari"]}
tensorflow = "2.1"
keras-rl = { git = "https://github.com/cipollone/keras-rl.git", branch = "tf2" }

[tool.poetry.dev-dependencies]
ipython = "*"
flake8 = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
